--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: python
-
 python:
-  - 2.6
-  - 2.7
-  - 3.4
-  - tip
+  - "2.6"
+  - "2.7"
+  - "3.3"
+  - "3.4"
+  - "3.5"
+  - "nightly"
 
-install: ""
+# command to install dependencies
+install: "pip install -r requirements_dev.txt"
+# command to run tests
+script: coverage run setup.py test
