chore: removing support: 2.6 3.3

--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,13 @@
 [tox]
-envlist = py26,py27,py34,py35
-commands=make test
+envlist = py27,py34,py35
+commands= coverage run --source pyception setup.py test
+
+[testenv]
+setenv =
+    PYTHONDONTWRITEBYTECODE = 1
+
+commands = make test
+
+deps =
+    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/requirements_dev.txt
